name: cabal-bounds
version: 0.1
cabal-version: >=1.9.2
build-type: Simple
license: UnspecifiedLicense
maintainer: daniel.trstenjak@gmail.com
synopsis: A command line program for managing the bounds/versions of the dependencies in a cabal file.
description:
    A command line program for managing the bounds/versions of the dependencies in a cabal file.
category: Utils
author: Daniel Trstenjak

source-repository head
    type: git
    location: https://github.com/dan-t/cabal-bounds

library
    exposed-modules:
        CabalBounds.Args
        CabalBounds.Command
        CabalBounds.Execute
        CabalBounds.Lenses
    build-depends:
        base >=3 && <5,
        cmdargs >=0.10.5 && <0.11,
        lens -any,
        pretty-show -any,
        strict -any,
        Cabal -any
    hs-source-dirs: src
    other-modules:
        Paths_cabal_bounds

executable cabal-bounds
    main-is: ExeMain1.hs
    build-depends:
        base -any,
        cmdargs -any,
        lens -any,
        pretty-show -any,
        strict -any,
        Cabal -any
    cpp-options: -DCABAL
    hs-source-dirs: src
    other-modules:
        Paths_cabal_bounds
        CabalBounds.Args
        CabalBounds.Command
        CabalBounds.Execute
        CabalBounds.Lenses
    ghc-options: -W

executable other-exe
    main-is: ExeMain2.hs
    build-depends:
        base -any,
        cmdargs -any,
        lens -any,
        pretty-show -any,
        strict -any,
        Cabal -any
    cpp-options: -DCABAL
    hs-source-dirs: src
    other-modules:
        Paths_cabal_bounds
        CabalBounds.Args
        CabalBounds.Command
        CabalBounds.Execute
        CabalBounds.Lenses
    ghc-options: -W

test-suite some-test
    type: exitcode-stdio-1.0
    main-is: TestMain1.hs
    build-depends:
        base >=3 && <5,
        cmdargs >=0.10.5 && <0.11,
        lens -any,
        pretty-show -any,
        strict -any,
        Cabal -any
    hs-source-dirs: src
    other-modules:
        Paths_cabal_bounds
        CabalBounds.Args
        CabalBounds.Command
        CabalBounds.Execute
        CabalBounds.Lenses
    ghc-options: -W
test-suite other-test
    type: exitcode-stdio-1.0
    main-is: TestMain2.hs
    build-depends:
        base >=3 && <5,
        cmdargs >=0.10.5 && <0.11,
        lens -any,
        pretty-show -any,
        strict -any,
        Cabal -any
    hs-source-dirs: src
    other-modules:
        Paths_cabal_bounds
        CabalBounds.Args
        CabalBounds.Command
        CabalBounds.Execute
        CabalBounds.Lenses
    ghc-options: -W
