name: setup-config
version: 0.1
cabal-version: >=1.9.2
build-type: Simple
license: UnspecifiedLicense
maintainer: daniel.trstenjak@gmail.com
author: Daniel Trstenjak

library
    exposed-modules:
        CabalBounds.Args
        CabalBounds.Command
        CabalBounds.Execute
        CabalBounds.Lenses
    build-depends:
        base >=3,
        A >=0.1 && <0.2,
        B >=0.2 && <0.3,
        C >=0.3 && <0.4
    hs-source-dirs: src
    other-modules:
        Paths_setup_config

executable cabal-bounds
    main-is: ExeMain1.hs
    build-depends:
        base >=3,
        A >=0.1 && <0.4,
        B >=0.2 && <0.4,
        C >=0.2.5 && <0.4
    cpp-options: -DCABAL
    hs-source-dirs: src
    other-modules:
        Paths_setup_config
        CabalBounds.Args
        CabalBounds.Command
        CabalBounds.Execute
        CabalBounds.Lenses
    ghc-options: -W

executable other-exe
    main-is: ExeMain2.hs
    build-depends:
        base >=3,
        A >=0.1 && <0.2,
        B >=0.2 && <0.3,
        C >=0.3 && <0.4
    cpp-options: -DCABAL
    hs-source-dirs: src
    other-modules:
        Paths_setup_config
        CabalBounds.Args
        CabalBounds.Command
        CabalBounds.Execute
        CabalBounds.Lenses
    ghc-options: -W

test-suite some-test
    type: exitcode-stdio-1.0
    main-is: TestMain1.hs
    build-depends:
        base >=3,
        A >=0.1 && <0.2,
        B >=0.2 && <0.3,
        C >=0.3 && <0.4
    hs-source-dirs: src
    other-modules:
        Paths_setup_config
        CabalBounds.Args
        CabalBounds.Command
        CabalBounds.Execute
        CabalBounds.Lenses
    ghc-options: -W
test-suite other-test
    type: exitcode-stdio-1.0
    main-is: TestMain2.hs
    build-depends:
        base >=3,
        A >=0.1 && <0.2,
        B >=0.2 && <0.3,
        C >=0.3 && <0.4
    hs-source-dirs: src
    other-modules:
        Paths_setup_config
        CabalBounds.Args
        CabalBounds.Command
        CabalBounds.Execute
        CabalBounds.Lenses
    ghc-options: -W
