name: cabal-bounds
version: 0.1
cabal-version: >=1.9.2
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: daniel.trstenjak@gmail.com
synopsis: A command line program for managing the bounds/versions of the dependencies in a cabal file.
description: A command line program for managing the bounds/versions of the dependencies in a cabal file.
category: Utils
author: Daniel Trstenjak
data-dir: ""
 
source-repository head
    type: git
    location: https://github.com/dan-t/cabal-bounds
 
library
    build-depends: base >=3 && <4.6.0.2, cmdargs >=0.10.5 && <0.10.8,
                   lens <4.0.2, pretty-show -any, strict <0.3.3, Cabal <1.18.2
    exposed-modules: CabalBounds.Args CabalBounds.Command
                     CabalBounds.Execute CabalBounds.Lenses
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules: Paths_cabal_bounds CabalBounds.Args
                   CabalBounds.Command CabalBounds.Execute CabalBounds.Lenses
 
executable cabal-bounds
    build-depends: base >=3 && <4.6.0.2, cmdargs >=0.10.5 && <0.10.8,
                   lens <4.0.2, pretty-show -any, strict <0.3.3, Cabal <1.18.2
    main-is: Main.hs
    buildable: True
    cpp-options: -DCABAL
    hs-source-dirs: src
    other-modules: Paths_cabal_bounds CabalBounds.Args
                   CabalBounds.Command CabalBounds.Execute CabalBounds.Lenses
    ghc-options: -W
 
executable other-exe
    build-depends: base >=3 && <4.6.0.2, cmdargs >=0.10.5 && <0.10.8,
                   lens <4.0.2, pretty-show -any, strict <0.3.3, Cabal <1.18.2
    main-is: Main.hs
    buildable: True
    cpp-options: -DCABAL
    hs-source-dirs: src
    other-modules: Paths_cabal_bounds CabalBounds.Args
                   CabalBounds.Command CabalBounds.Execute CabalBounds.Lenses
    ghc-options: -W
 
test-suite some-test
    build-depends: base >=3 && <4.6.0.2, cmdargs >=0.10.5 && <0.10.8,
                   lens <4.0.2, pretty-show -any, strict <0.3.3, Cabal <1.18.2
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    ghc-options: -W
test-suite other-test
    build-depends: base >=3 && <4.6.0.2, cmdargs >=0.10.5 && <0.10.8,
                   lens <4.0.2, pretty-show -any, strict <0.3.3, Cabal <1.18.2
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    ghc-options: -W
 