name: cabal-bounds
version: 0.1
cabal-version: >=1.9.2
build-type: Simple
license: AllRightsReserved
maintainer: daniel.trstenjak@gmail.com
synopsis: A command line program for managing the bounds/versions of the dependencies in a cabal file.
description:
    A command line program for managing the bounds/versions of the dependencies in a cabal file.
category: Utils
author: Daniel Trstenjak
 
source-repository head
    type: git
    location: https://github.com/dan-t/cabal-bounds
 
library
    build-depends:
        base >=3 && <5,
        cmdargs >=0.10.5 && <0.11,
        lens -any,
        pretty-show -any,
        strict -any,
        Cabal -any
    exposed-modules:
        CabalBounds.Args
        CabalBounds.Command
        CabalBounds.Execute
        CabalBounds.Lenses
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules:
        Paths_cabal_bounds
 
executable cabal-bounds
    build-depends:
        base >=3 && <4.7,
        cmdargs >=0.10.5 && <0.11,
        lens <4.1,
        pretty-show <1.7,
        strict <0.4,
        Cabal <1.21
    main-is: ExeMain1.hs
    buildable: True
    cpp-options: -DCABAL
    hs-source-dirs: src
    other-modules:
        Paths_cabal_bounds
        CabalBounds.Args
        CabalBounds.Command
        CabalBounds.Execute
        CabalBounds.Lenses
    ghc-options: -W
 
executable other-exe
    build-depends:
        base >=3 && <5,
        cmdargs >=0.10.5 && <0.11,
        lens -any,
        pretty-show -any,
        strict -any,
        Cabal -any
    main-is: ExeMain2.hs
    buildable: True
    cpp-options: -DCABAL
    hs-source-dirs: src
    other-modules:
        Paths_cabal_bounds
        CabalBounds.Args
        CabalBounds.Command
        CabalBounds.Execute
        CabalBounds.Lenses
    ghc-options: -W
 
test-suite some-test
    build-depends:
        base >=3 && <5,
        cmdargs >=0.10.5 && <0.11,
        lens -any,
        pretty-show -any,
        strict -any,
        Cabal -any
    type: exitcode-stdio-1.0
    main-is: TestMain1.hs
    buildable: True
    hs-source-dirs: src
    other-modules:
        Paths_cabal_bounds
        CabalBounds.Args
        CabalBounds.Command
        CabalBounds.Execute
        CabalBounds.Lenses
    ghc-options: -W
test-suite other-test
    build-depends:
        base >=3 && <5,
        cmdargs >=0.10.5 && <0.11,
        lens -any,
        pretty-show -any,
        strict -any,
        Cabal -any
    type: exitcode-stdio-1.0
    main-is: TestMain2.hs
    buildable: True
    hs-source-dirs: src
    other-modules:
        Paths_cabal_bounds
        CabalBounds.Args
        CabalBounds.Command
        CabalBounds.Execute
        CabalBounds.Lenses
    ghc-options: -W
 